Implement listener-based memory tracking
Co-authored-by: Ioannis Panagiotas <ioannis.panagiotas@neotechnology.com>